# nparty

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  example_config.toml  example_config_2016.toml  example_config_2019.toml  shorten_maincode.py  thoughts.md
.github/: cd.yml
.github/workflows/: cd.yml
src/: aggregator.rs  app.rs  booths.rs  cli.yaml  config.rs  data.rs  dependencies.tsv  dependencies.txt  gui.rs  license-preface.txt  main.rs  multiplier.rs  optimisation.md  speedread.rs  term.rs  upgrades.rs  utils.rs
src/data_files/: data_template.html  downloads.ron  list_template.html
