[package]
name = "nparty"
version = "0.1.3"
authors = ["Alex Jago <4475543+alexjago@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "N-Party-Preferred distribution of Australian Senate ballots and subsequent analysis."
default-run = "nparty"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
regex = "1.5.6"
atty = "0.2.14"
itertools = "0.10.3"
zip = "0.6.2"
factorial = "0.2.1"
clap = { version = "=3.0.0", features = ["color", "derive", "suggestions"] }
toml_edit = { version = "0.12.6", features = ["serde"] }
tabwriter = "1.2.1"
ron = "0.7.0"
url = "2.2.2"
ehttp = "0.2.0"
glob = "0.3.0"
Inflector = "0.11.4"
anyhow = "1.0.52"
klask = { git = "https://github.com/MichalGniadek/klask" }
indexmap = { version = "1.8.0", features = ["serde-1"] }

[profile.release]
debug = false

[[bin]]
name = "nparty"
path = "src/main.rs"

[[bin]]
name = "nparty-gui"
path = "src/gui.rs"

[package.metadata.bundle.bin.nparty-gui]
name = "nparty"
identifier = "net.abjago.nparty"
