[package]
name = "nparty"
version = "0.1.3"
authors = ["Alex Jago <4475543+alexjago@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "N-Party-Preferred distribution of Australian Senate ballots and subsequent analysis."
default-run = "nparty"
rust-version = "1.70"
repository = "https://github.com/alexjago/nparty"
keywords = ["senate", "party-preferred", "psephology"]
categories = ["cli", "gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = "1.0.139"
serde_derive = "1.0.139"
serde_json = "1.0.82"
regex = "1.6.0"
itertools = "0.10.3"
zip = "0.6.2"
factorial = "0.2.1"
clap = { version = "3.0.0", features = ["color", "derive", "suggestions"] }
toml_edit = { version = "0.14.4", features = ["serde"] }
tabwriter = "1.2.1"
ron = "0.7.1"
url = "2.2.2"
ehttp = "0.2.0"
glob = "0.3.0"
Inflector = "0.11.4"
# anyhow = "1.0.58"
klask = { git = "https://github.com/MichalGniadek/klask" }
indexmap = { version = "1.9.1", features = ["serde-1"] }
color-eyre = { default-features = false, version = "0.6.2" }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
clap-verbosity-flag = "1.0.1"
log = "0.4.17"
string-interner = { version = "0.14.0", default-features = false, features = [
    "backends",
    "std",
] }
ouroboros = "0.18.0"

[profile.release]
debug = true # for flamegraph

[[bin]]
name = "nparty"
path = "src/main.rs"

[[bin]]
name = "nparty-gui"
path = "src/gui.rs"

[[bin]]
name = "speedread"
path = "src/speedread.rs"


[package.metadata.bundle.bin.nparty-gui]
name = "nparty"
identifier = "net.abjago.nparty"
